--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   },
   "homepage": "https://github.com/Rukeith/node-db-switcher#readme",
   "dependencies": {
+    "firebase": "^4.6.0",
     "mongoose": "^4.12.3",
-    "sequelize": "^4.15.0"
+    "mysql2": "^1.4.2",
+    "pg": "^7.3.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^4.15.0",
+    "sqlite3": "^3.1.13",
+    "tedious": "^2.0.0",
+    "websql": "^0.4.4"
   }
 }
